tests/baselines/reference/classNotExtendingStruct.errors.txt
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/classNotExtendingStruct.ts(5,17): error TS2311: A class may only extend another class.


==== tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/classNotExtendingStruct.ts (1 errors) ====
    struct S {
    	bar: string;
    }
    
    class C extends S { // error, class may only extend class
                    ~
!!! error TS2311: A class may only extend another class.
    	foo: string;
    }
    